--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
-name=Basic Project
-organization=com.example
-version=0.0.1
+name=CANNOT BE EMPTY
+organization=rugds
+version=0.0.1-SNAPSHOT
 description=A basic scala project
